        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=9976
        Fix negative width issue in Hixie's test

        Refuse to render zero or negative width/height.



Canonical link: https://commits.webkit.org/20405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26415 268f45cc-cd09-0410-ab3c-d52691b4dbfc